maze.lessons.maze.island.IslandMaze.scala.error
Escaper:21: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		else if(!estFaceMur() && getDirection()=Direction.NORTH)
                                      ^